[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/EnemyBookcase.gd" type="Script" id=1]
[ext_resource path="res://Sprites/furniture-shadow.png" type="Texture" id=2]
[ext_resource path="res://Sprites/bookcase-front-floating.png" type="Texture" id=3]
[ext_resource path="res://Enemies/idle_float.tres" type="Animation" id=4]
[ext_resource path="res://Enemies/rise.tres" type="Animation" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/idle_float = ExtResource( 4 )
anims/rise = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="HPBar" type="ColorRect" parent="."]
margin_top = -8.0
margin_right = 32.0
margin_bottom = -6.0
color = Color( 1, 0, 0, 1 )

[node name="MoveBar" type="ColorRect" parent="."]
margin_top = -6.0
margin_bottom = -4.0
color = Color( 0.803922, 1, 0, 1 )

[node name="AnimationTween" type="Tween" parent="."]

[node name="MoveBarTween" type="Tween" parent="."]

[node name="OnScreen" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, 0, 32, 32 )
